[package]
name = "lynx"
version = "0.1.0"
description = "A Gecko-based browser built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "lynx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1" }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
thiserror = "1.0"

# Gecko integration
#rust-mozjs = "0.14"
mozjs = "0.10.1"
geckodriver = "0.33"
selenium-rs = "0.1.2"
fantoccini = "0.19"

# System bindings
libloading = "0.8"
libc = "0.2"

# Additional utilities
uuid = { version = "1.3", features = ["v4", "serde"] }
log = "0.4"
url = "2.4"
dirs = "5.0"
futures = "0.3"
async-trait = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = []

# Optimize release builds
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3
